--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Thatsawan Profile</h1>
     <p>I am a student</p>
+    <footer>Contact : thasawan.tin@gmail.com</footer>
 </body>
 </html>
